website/code/nsieve-gcj-2.log
BUILD COMMANDS FOR: nsieve.gcj-2.gcj

Sun Apr  8 20:06:50 PDT 2007

/usr/bin/gcj-4.1 -O3 -fomit-frame-pointer -march=athlon-tbird  -o nsieve.gcj-2.gcj_run --main=nsieve nsieve.java
nsieve.java: In class 'nsieve':
nsieve.java: In method 'nsieve.nsieve(int)':
nsieve.java:19: error: Can't find method ‘format(Ljava/lang/String;II)’ in type ‘java.lang.String’.
    System.out.println(String.format("Primes up to %8d %8d", m, count));
                                ^
1 error
make[1]: [nsieve.gcj-2.gcj_run] Error 1 (ignored)
rm nsieve.gcj-2.gcj

=================================================================
COMMAND LINE (%A is single numeric argument):

nsieve.gcj-2.gcj_run %A
Error, could not exec nsieve.gcj-2.gcj_run 7 (No such file or directory)
PATH=/opt/shootout/shootout/bench/nsieve:/opt/shootout/shootout/bench/nsieve/tmp:/home/brent/bin:/usr/share/smlnj/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
